--- a/WhatsYummyApp/WhatsYummyApp/Views/Account/Login.cshtml
+++ b/WhatsYummyApp/WhatsYummyApp/Views/Account/Login.cshtml
@@ -5,7 +5,7 @@
 @inject SignInManager<Utilizador> SignInManager
 
 @{
-    ViewData["Title"] = "Log in";
+    ViewData["Title"] = "Iniciar Sessão";
 }
 
 <h2>@ViewData["Title"].</h2>
@@ -13,7 +13,7 @@
     <div class="col-md-8">
         <section>
             <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
-                <h4>Use a local account to log in.</h4>
+                <h4>Inicia sessão com a tua conta para poderes usufruir da aplicação.</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
@@ -42,14 +42,14 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <button type="submit" class="btn btn-default">Log in</button>
+                        <button type="submit" class="btn btn-default">Iniciar sessão</button>
                     </div>
                 </div>
                 <p>
-                    <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Register as a new user?</a>
+                    <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Ainda não está registado?</a>
                 </p>
                 <p>
-                    <a asp-action="ForgotPassword">Forgot your password?</a>
+                    <a asp-action="ForgotPassword">Esqueceu a password?</a>
                 </p>
             </form>
         </section>
