--- a/WhatsYummy/WhatsYummy/Views/Home/Search.cshtml
+++ b/WhatsYummy/WhatsYummy/Views/Home/Search.cshtml
@@ -1,8 +1,49 @@
-﻿@{
+﻿@model IEnumerable<WhatsYummy.Models.Produto>
 
-	for (int i = 1; i <= 5; i++)
-    {
-        <p> ViewData["search_input"] </p>
-    }
-
+@{
+    ViewData["Title"] = "Search";
 }
+
+<h2>Procura</h2>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Nome)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Descricao)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Preco)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Foto)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Descricao)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Preco)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Foto)
+                </td>
+                <td>
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
