search page 100% ready for errors

--- a/WhatsYummy/WhatsYummy/Views/Home/Search.cshtml
+++ b/WhatsYummy/WhatsYummy/Views/Home/Search.cshtml
@@ -1,49 +1,63 @@
 ﻿@model IEnumerable<WhatsYummy.Models.Produto>
 
 @{
-    ViewData["Title"] = "Search";
+    ViewData["Title"] = "Resultados da pesquisa";
 }
 
-<h2>Procura</h2>
+<h2>@ViewData["Title"]</h2>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Nome)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Descricao)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Preco)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Foto)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Descricao)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Preco)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Foto)
-                </td>
-                <td>
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+@{
+	if(!Model.Any())
+    {
+        <p> Não existem resultados disponíveis! </p>
+        <a asp-action="Index" class="btn btn-default">Voltar</a>
+    }
+}
+
+@{
+    if(Model.Any())
+    {
+	<table class="table">
+	    <thead>
+	        <tr>
+	            <th>
+	                @Html.DisplayNameFor(model => model.Nome)
+	            </th>
+	            <th>
+	                @Html.DisplayNameFor(model => model.Descricao)
+	            </th>
+	            <th>
+	                @Html.DisplayNameFor(model => model.Preco)
+	            </th>
+	            <th>
+	                @Html.DisplayNameFor(model => model.Foto)
+	            </th>
+	            <th></th>
+	        </tr>
+	    </thead>
+	
+	    <tbody>
+		        @foreach (var item in Model)
+		        {
+		            <tr>
+		                <td>
+		                    @Html.DisplayFor(modelItem => item.Nome)
+		                </td>
+		                <td>
+		                    @Html.DisplayFor(modelItem => item.Descricao)
+		                </td>
+		                <td>
+		                    @Html.DisplayFor(modelItem => item.Preco)
+		                </td>
+		                <td>
+		                    @Html.DisplayFor(modelItem => item.Foto)
+		                </td>
+		                <td>
+		                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+		                </td>
+		            </tr>
+			}
+		    </tbody>
+	</table>
+    }
+}
