--- a/WhatsYummy/WhatsYummy/Views/Shared/_Layout.cshtml
+++ b/WhatsYummy/WhatsYummy/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
                         <a href="#">Visitas recentes</a>
                     </li>
                     <li>
-                        <a href="#">Gerir estabelecimentos</a>
+                        <a asp-controller="Estabelecimentos" asp-action="Index" >Gerir estabelecimentos</a>
                     </li>
                     <li>
                         <a href="#">Terminar sessão</a>
