--- a/WhatsYummy/WhatsYummy/Views/Home/Search.cshtml
+++ b/WhatsYummy/WhatsYummy/Views/Home/Search.cshtml
@@ -17,47 +17,53 @@
 @{
     if(Model.Any())
     {
-	<table class="table">
-	    <thead>
-	        <tr>
-	            <th>
-	                @Html.DisplayNameFor(model => model.Nome)
-	            </th>
-	            <th>
-	                @Html.DisplayNameFor(model => model.Descricao)
-	            </th>
-	            <th>
-	                @Html.DisplayNameFor(model => model.Preco)
-	            </th>
-	            <th>
-	                @Html.DisplayNameFor(model => model.Foto)
-	            </th>
-	            <th></th>
-	        </tr>
-	    </thead>
-	
-	    <tbody>
-		        @foreach (var item in Model)
-		        {
-		            <tr>
-		                <td>
-		                    @Html.DisplayFor(modelItem => item.Nome)
-		                </td>
-		                <td>
-		                    @Html.DisplayFor(modelItem => item.Descricao)
-		                </td>
-		                <td>
-		                    @Html.DisplayFor(modelItem => item.Preco)
-		                </td>
-		                <td>
-		                    @Html.DisplayFor(modelItem => item.Foto)
-		                </td>
-		                <td>
-		                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-		                </td>
-		            </tr>
-			}
-		    </tbody>
-	</table>
+    <div class="row">
+	    <div class="col-lg-12">
+	        <div style="overflow-x:auto;">
+				<table class="table">
+				    <thead>
+				        <tr>
+				            <th>
+				                @Html.DisplayNameFor(model => model.Nome)
+				            </th>
+				            <th>
+				                @Html.DisplayNameFor(model => model.Descricao)
+				            </th>
+				            <th>
+				                @Html.DisplayNameFor(model => model.Preco)
+				            </th>
+				            <th>
+				                @Html.DisplayNameFor(model => model.Foto)
+				            </th>
+				            <th></th>
+				        </tr>
+				    </thead>
+				
+				    <tbody>
+					        @foreach (var item in Model)
+					        {
+					            <tr>
+					                <td>
+					                    @Html.DisplayFor(modelItem => item.Nome)
+					                </td>
+					                <td>
+					                    @Html.DisplayFor(modelItem => item.Descricao)
+					                </td>
+					                <td>
+					                    @Html.DisplayFor(modelItem => item.Preco)
+					                </td>
+					                <td>
+					                    @Html.DisplayFor(modelItem => item.Foto)
+					                </td>
+					                <td>
+					                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+					                </td>
+					            </tr>
+						}
+					    </tbody>
+				</table>
+			</div>
+		</div>
+	</div>
     }
 }
