--- a/WhatsYummy/WhatsYummy/Views/Home/About.cshtml
+++ b/WhatsYummy/WhatsYummy/Views/Home/About.cshtml
@@ -3,11 +3,57 @@
     ViewData["Title"] = "About";
 }
 
-@{
+    <h1 style="text-align:center">Siga as direções</h3>
+    <div id="map"></div>
+    <style>
+      #map {
+        width: 100%;
+        height: 400px;
+        background-color: grey;
+		margin-bottom: 30px;
+      }
+    </style>
+    <script>
+      function initMap() {
+        var directionsDisplay = new google.maps.DirectionsRenderer;
+        var directionsService = new google.maps.DirectionsService;
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 17,
+          center: {lat: 37.77, lng: -122.447}
+        });
+        directionsDisplay.setMap(map);
 
-    for (int i = 1; i <= 5; i++)
-    {
-        <p> @ViewData["search_input"] </p>
-    }
+        calculateAndDisplayRoute(directionsService, directionsDisplay);
+        document.getElementById('mode').addEventListener('change', function() {
+          calculateAndDisplayRoute(directionsService, directionsDisplay);
+        });
+      }
 
-}
+      function calculateAndDisplayRoute(directionsService, directionsDisplay) {
+        var selectedMode = document.getElementById('mode').value;
+        directionsService.route({
+          origin: {lat: 37.77, lng: -122.447},  // Haight.
+          destination: {lat: 37.768, lng: -122.511},  // Ocean Beach.
+          // Note that Javascript allows us to access the constant
+          // using square brackets and a string value as its
+          // "property."
+          travelMode: google.maps.TravelMode[selectedMode]
+        }, function(response, status) {
+          if (status == 'OK') {
+            directionsDisplay.setDirections(response);
+          } else {
+            window.alert('Directions request failed due to ' + status);
+          }
+        });
+      }
+    </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9Fz8X1RTyq6jXHuFUaAV2EvWh0oynCS4&callback=initMap">
+    </script>
+
+    <div class="row">
+        <div class="col-lg-12" style="text-align:center;">
+			<a asp-action="Index" class="btn btn-default">Cheguei ao destino!</a>
+			<a asp-action="Index" class="btn btn-default">Cancelar</a>
+		</div>
+	</div>	
