--- a/WhatsYummy/WhatsYummy/Views/Home/About.cshtml
+++ b/WhatsYummy/WhatsYummy/Views/Home/About.cshtml
@@ -3,43 +3,59 @@
     ViewData["Title"] = "About";
 }
 
-    <h1 style="text-align:center">Siga as direções</h3>
+    <h1 style="text-align:center">Siga as direções </h1>
+    <p id="demo"></p>
     <div id="map"></div>
     <style>
       #map {
         width: 100%;
         height: 400px;
         background-color: grey;
-		margin-bottom: 30px;
+        margin-bottom: 30px;
       }
     </style>
     <script>
-      function initMap() {
-        var directionsDisplay = new google.maps.DirectionsRenderer;
+      function getLocation() {
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(initMap);
+            } else { 
+               // error 
+            }
+        }
+
+      function initMap(position) {
+
+
+        var myLat = position.coords.latitude;
+        var myLon = position.coords.longitude; 
+
         var directionsService = new google.maps.DirectionsService;
+        var directionsDisplay = new google.maps.DirectionsRenderer;
         var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 17,
-          center: {lat: 37.77, lng: -122.447}
+          zoom: 14,
+          center: {lat: position.coords.latitude, lng: position.coords.longitude}
         });
         directionsDisplay.setMap(map);
 
-        calculateAndDisplayRoute(directionsService, directionsDisplay);
-        document.getElementById('mode').addEventListener('change', function() {
-          calculateAndDisplayRoute(directionsService, directionsDisplay);
-        });
+        //var onChangeHandler = function() {
+          calculateAndDisplayRoute(directionsService, directionsDisplay, myLat, myLon);
+        //};
+        //ocument.getElementById('start').addEventListener('change', onChangeHandler);
+        //document.getElementById('end').addEventListener('change', onChangeHandler);
       }
 
-      function calculateAndDisplayRoute(directionsService, directionsDisplay) {
-        var selectedMode = document.getElementById('mode').value;
+      function getLatLngFromString(ll) {
+        var latlng = ll.split(/, ?/)
+        return new google.maps.LatLng(parseFloat(latlng[0]), parseFloat(latlng[1])); 
+      }
+
+      function calculateAndDisplayRoute(directionsService, directionsDisplay, myLat, myLon) {
         directionsService.route({
-          origin: {lat: 37.77, lng: -122.447},  // Haight.
-          destination: {lat: 37.768, lng: -122.511},  // Ocean Beach.
-          // Note that Javascript allows us to access the constant
-          // using square brackets and a string value as its
-          // "property."
-          travelMode: google.maps.TravelMode[selectedMode]
+          origin: new google.maps.LatLng(myLat, myLon),
+          destination: "rua dos soutinhos santo tirso",
+          travelMode: 'DRIVING'
         }, function(response, status) {
-          if (status == 'OK') {
+          if (status === 'OK') {
             directionsDisplay.setDirections(response);
           } else {
             window.alert('Directions request failed due to ' + status);
@@ -48,12 +64,12 @@
       }
     </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9Fz8X1RTyq6jXHuFUaAV2EvWh0oynCS4&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9Fz8X1RTyq6jXHuFUaAV2EvWh0oynCS4&callback=getLocation">
     </script>
 
     <div class="row">
         <div class="col-lg-12" style="text-align:center;">
-			<a asp-action="Index" class="btn btn-default">Cheguei ao destino!</a>
-			<a asp-action="Index" class="btn btn-default">Cancelar</a>
-		</div>
-	</div>	
+            <a asp-action="Index" class="btn btn-default">Cheguei ao destino!</a>
+            <a asp-action="Index" class="btn btn-default">Cancelar</a>
+        </div>
+    </div>  
