--- a/WhatsYummy/WhatsYummy/Views/Home/About.cshtml
+++ b/WhatsYummy/WhatsYummy/Views/Home/About.cshtml
@@ -2,74 +2,69 @@
 @{
     ViewData["Title"] = "About";
 }
+<div class="row">
+    <div class="col-lg-12">
+	    <h1 style="text-align:center">Siga as direções </h1>
+	    <div id="map" style="width: 100%;height: 400px;background-color: grey;margin-bottom: 30px;"></div>
 
-    <h1 style="text-align:center">Siga as direções </h1>
-    <p id="demo"></p>
-    <div id="map"></div>
-    <style>
-      #map {
-        width: 100%;
-        height: 400px;
-        background-color: grey;
-        margin-bottom: 30px;
-      }
-    </style>
-    <script>
-      function getLocation() {
-            if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(initMap);
-            } else { 
-               // error 
-            }
-        }
+	    <script>
+	      function getLocation() {
+	            if (navigator.geolocation) {
+	                navigator.geolocation.getCurrentPosition(initMap);
+	            } else { 
+	               // error 
+	            }
+	        }
 
-      function initMap(position) {
+	      function initMap(position) {
 
 
-        var myLat = position.coords.latitude;
-        var myLon = position.coords.longitude; 
+	        var myLat = position.coords.latitude;
+	        var myLon = position.coords.longitude; 
 
-        var directionsService = new google.maps.DirectionsService;
-        var directionsDisplay = new google.maps.DirectionsRenderer;
-        var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 14,
-          center: {lat: position.coords.latitude, lng: position.coords.longitude}
-        });
-        directionsDisplay.setMap(map);
+	        var directionsService = new google.maps.DirectionsService;
+	        var directionsDisplay = new google.maps.DirectionsRenderer;
+	        var map = new google.maps.Map(document.getElementById('map'), {
+	          zoom: 17,
+	          center: {lat: position.coords.latitude, lng: position.coords.longitude}
+	        });
+	        directionsDisplay.setMap(map);
 
-        //var onChangeHandler = function() {
-          calculateAndDisplayRoute(directionsService, directionsDisplay, myLat, myLon);
-        //};
-        //ocument.getElementById('start').addEventListener('change', onChangeHandler);
-        //document.getElementById('end').addEventListener('change', onChangeHandler);
-      }
+	        //var onChangeHandler = function() {
+	          calculateAndDisplayRoute(directionsService, directionsDisplay, myLat, myLon);
+	        //};
+	        //ocument.getElementById('start').addEventListener('change', onChangeHandler);
+	        //document.getElementById('end').addEventListener('change', onChangeHandler);
+	      }
 
-      function getLatLngFromString(ll) {
-        var latlng = ll.split(/, ?/)
-        return new google.maps.LatLng(parseFloat(latlng[0]), parseFloat(latlng[1])); 
-      }
+	      function getLatLngFromString(ll) {
+	        var latlng = ll.split(/, ?/)
+	        return new google.maps.LatLng(parseFloat(latlng[0]), parseFloat(latlng[1])); 
+	      }
 
-      function calculateAndDisplayRoute(directionsService, directionsDisplay, myLat, myLon) {
-        directionsService.route({
-          origin: new google.maps.LatLng(myLat, myLon),
-          destination: "rua dos soutinhos santo tirso",
-          travelMode: 'DRIVING'
-        }, function(response, status) {
-          if (status === 'OK') {
-            directionsDisplay.setDirections(response);
-          } else {
-            window.alert('Directions request failed due to ' + status);
-          }
-        });
-      }
-    </script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9Fz8X1RTyq6jXHuFUaAV2EvWh0oynCS4&callback=getLocation">
-    </script>
+	      function calculateAndDisplayRoute(directionsService, directionsDisplay, myLat, myLon) {
+	        directionsService.route({
+	          origin: new google.maps.LatLng(myLat, myLon),
+	          destination: "rua dos soutinhos santo tirso",
+	          travelMode: 'DRIVING'
+	        }, function(response, status) {
+	          if (status === 'OK') {
+	            directionsDisplay.setDirections(response);
+	          } else {
+	            window.alert('Directions request failed due to ' + status);
+	          }
+	        });
+	      }
+	    </script>
+	    <script async defer
+	    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9Fz8X1RTyq6jXHuFUaAV2EvWh0oynCS4&callback=getLocation">
+	    </script>
 
-    <div class="row">
-        <div class="col-lg-12" style="text-align:center;">
-            <a asp-action="Index" class="btn btn-default">Cheguei ao destino!</a>
-            <a asp-action="Index" class="btn btn-default">Cancelar</a>
-        </div>
-    </div>  
+	    <div class="row">
+	        <div class="col-lg-12" style="text-align:center;">
+	            <a asp-action="Index" class="btn btn-default">Cheguei ao destino!</a>
+	            <a asp-action="Index" class="btn btn-default">Cancelar</a>
+	        </div>
+	    </div>  
+	</div>
+</div>	
